--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 <head>
   <title>Pragprog Books Online Store</title>
@@ -13,6 +13,10 @@
 	</div>
 	<div id="columns">
 		<div id="side">
+			<div id="cart">
+				<%= render @cart %>
+			</div>
+			
 			<ul>
 				<li><a href="http://www....">Home</a></li>
 				<li><a href="http://www..../faq">Questions</a></li>
